@@ -47,6 +47,8 @@ First level constructors
       dtype : dtype
         The type of the output array.  If `dtype` is not given, infer
         the data type from the other input arguments.
+      kwargs : list of parameters or dictionary
+        Any parameter supported by the carray constructor.
 
     Returns:
       out : carray
@@ -101,6 +103,24 @@ First level constructors
       twice (which is slooow).  It avoids memory leaks to happen too
       (which can be important for large iterables).
 
+.. py:function:: zeros(shape, dtype=float, **kwargs)
+
+    Return a new carray object of given shape and type, filled with zeros.
+
+    Parameters:
+      shape : int
+        Shape of the new array, e.g., ``2``.  Only 1-d shapes supported.
+      dtype : data-type, optional
+        The desired data-type for the array, e.g., `numpy.int8`.  Default is
+        `numpy.float64`.
+      kwargs : list of parameters or dictionary
+        Any parameter supported by the carray constructor.
+
+    Returns:
+      out : carray
+        Array of zeros with the given shape and dtype.
+
+
 Utility functions
 =================
 
@@ -146,7 +166,7 @@ Utility functions
 The carray class
 ================
 
-.. py:class:: carray(array, cparams=None, expectedlen=None, chunklen=None)
+.. py:class:: carray(array, cparams=None, dtype=None, expectedlen=None, chunklen=None)
 
   A compressed and enlargeable in-memory data container.
 
